Fixed bug in project list by using margin instead of justify-content for item spacing

--- a/components/work-list/work-list.module.css
+++ b/components/work-list/work-list.module.css
@@ -37,7 +37,7 @@
 	.work-list {
 		display: flex;
 		flex-flow: row wrap;
-		justify-content: space-between;
+		justify-content: flex-start;
 
 		& .work-item {
 			display: flex-item;
@@ -47,16 +47,30 @@
 
 @media screen and (min-width: 500px) and (max-width: 800px) {
 
-	.work-list .work-item {
-		flex-basis: 48%;
-		margin-bottom: 4%;
+	.work-list {
+		margin-left: -1.5%;
+		margin-right: -1.5%;
+
+		& .work-item {
+			flex-basis: 47%;
+			margin-bottom: 4%;
+			margin-left: 1.5%;
+			margin-right: 1.5%;
+		}
 	}
 }
 
 @media screen and (min-width: 801px) {
 
-	.work-list .work-item {
-		flex-basis: 31%;
-		margin-bottom: 2%;
+	.work-list {
+		margin-left: -1.166665%;
+		margin-right: -1.166665%;
+		
+		& .work-item {
+			flex-basis: 31%;
+			margin-bottom: 2%;
+			margin-left: 1.166665%;
+			margin-right: 1.166665%;
+		}
 	}
 }
